Поиск файлов по критерию [#783 #96397]